--- a/style.css
+++ b/style.css
@@ -35,18 +35,18 @@ input, select, button {
   max-width: 300px;
 }
 .button-primary {
-  background-color: #59ad20;
+  background-color: #7cbb52;
   color: white;
   border: none;
   border-radius: 8px;
   cursor: pointer;
 }
 .button-primary:hover {
-  background-color: #cf7622;
+  background-color: #fc9a3f;
 }
 .button-exit, .button-cancel {
   margin-top: 10px;
-  background-color: #d84857;
+  background-color: #a86c72;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -55,7 +55,7 @@ input, select, button {
   cursor: pointer;
 }
 .button-exit:hover, .button-cancel:hover {
-  background-color: #cf7622;
+  background-color: #fc9a3f;
 }
 .menu-item {
   text-align: center;
